    ByteBuffers is not altered when written. (Rob Turner via cutting)

    AVRO-1442. Java: Fix ResolvingGrammarGenerator to work with fixed type.
    (Jim Pivarski via cutting)

    AVRO-1500. Java: Fix bug in handling of Thrift shorts in unions.
    (Michael Pershyn via cutting)

    AVRO-1513. Perl: Remove test plans from unit test files.
    (John Karp via cutting)

Avro 1.7.6 (15 January 2014)

  NEW FEATURES

    AVRO-975. C#: Add RPC support. (Mark Lamley via cutting)

    AVRO-1388. Java: Add fsync support to DataFileWriter.
    (Hari Shreedharan via cutting)

    AVRO-1373. Java: Add support for "xz" compresssion codec, using LZMA2.
    (Nick White via cutting)

    AVRO-1400. Java: Add AvroDefault reflect annotation to specify
    default values. (cutting)

    AVRO-1397. Java: Binary fragment tools can now read multiple
    objects from their input.  (Rob Turner via cutting)

    AVRO-1396. Java: Enable tojson command-line tool to pretty print output.
    (Rob Turner via cutting)

    AVRO-1409. Java: Add an API for testing schema compatibility.
    (Christophe Taton via cutting)

    AVRO-1379. C: avro_file_writer_append_encoded() function.
    (Mark Teodoro via dcreager)

    AVRO-1414. C++: Add support for deflate-compressed data files.
    (Daniel Russel via cutting)

    AVRO-1418. Java: Add sync support to AvroMultipleOutputs.
    (Deepak Kumar V via cutting)

    AVRO-1421. Java: Add an @AvroSchema annotation to reflect. (cutting)

    AVRO-1382. Add support for Python3. (Christophe Taton via cutting)

  OPTIMIZATIONS

    AVRO-1348. Java: Improve UTF-8 to String conversion performance in
    Java 6. (cutting)

  IMPROVEMENTS

    AVRO-1355. Java: Reject schemas with duplicate field
    names. (Christophe Taton via cutting)

    AVRO-1332. C#: Improve DatumReader performance.
    (David McIntosh via cutting)

    AVRO-1387. Java: Add DataFileWriter option to inhibit flush per block.
    (Hari Shreedharan via cutting)
