@@ -84,6 +84,9 @@ Trunk (not yet released)
     AVRO-1513. Perl: Remove test plans from unit test files.
     (John Karp via cutting)
 
+    AVRO-1462. Perl: Stop spurious serializer warnings about Non-ASCII
+    decimal characters.  (John Karp via cutting)
+
 Avro 1.7.6 (15 January 2014)
 
   NEW FEATURES
